# coursework-sem3

./: CMakeLists.txt  Dockerfile  README.md  app  integrator_app  integrators.db  main.cpp  queries.sql
include/: console.h  db.h  http_server.h  util.h
src/: console.cpp  db.cpp  http_server.cpp  main.cpp  util.cpp
web/: index.html
